# kagglefetcher

./: .gitignore  README.md  pyproject.toml
example/: example.py
kagglefetcher/: __init__.py  core.py  utils.py
kagglefetcher/src/: core.py  exceptions.py
src/kagglefetcher/: utils.py
tests/: test_fetcher.py
