[build-system]
requires = ["setuptools>=75.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kagglefetcher"
version = "0.1.0"
authors = [
    {name = "Sayan Sarkar", email = "sayan84c@gmail.com"}
]
description = "A flexible wrapper around kagglehub for simplified dataset management"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["kaggle", "datasets", "data-science", "kagglehub", "machine-learning", "deep-learning","ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "kagglehub>=0.3.13",
    "urllib3>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "pytest>=8.4.2",
    "pytest-cov>=4.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Repository = "https://github.com/psypherion/kagglefetcher"
Issues = "https://github.com/psypherion/kagglefetcher/issues"
Documentation = "https://github.com/psypherion/kagglefetcher#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[mypy]
python_version = 3.11
disallow_untyped_defs = True
ignore_missing_imports = True
strict_optional = True
pretty = True
